fix: resolve Vercel 404 by adding SPA routing and correcting build mapping

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
     "version": 2,
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.py"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "frontend/dist/$1"
-        }
-    ],
     "builds": [
         {
             "src": "api/index.py",
@@ -21,6 +11,19 @@
             "config": {
                 "distDir": "dist"
             }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "api/index.py"
+        },
+        {
+            "handle": "filesystem"
+        },
+        {
+            "src": "/.*",
+            "dest": "index.html"
         }
     ]
 }
